2005-09-23  Florian Boor <florian@kernelconcepts.de>

	* More icon loading and background parsing fixes.

2005-09-12  Florian Boor <florian@kernelconcepts.de>

	* Introduce ChangeLog
	* todo.c, calendar.c: Update pixmap loading to new standards.
	                      Simplify database path generation.